# email-webhook-verification-sdk

./: .gitignore
.github/workflows/: dotnet-build-and-test.yml  dotnet-on-pr.yml  dotnet-on-push.yml  go-build-and-test.yml  go-on-pr.yml  go-on-push.yml  javascript-build-and-test.yml  javascript-on-pr.yml  javascript-on-push.yml  python-build-and-test.yml  python-on-pr.yml  python-on-push.yml  rust-build-and-test.yml  rust-on-pr.yml  rust-on-push.yml
dotnet/: .gitignore  README.md
dotnet/CM.Email.WebhookVerification/: CHANGELOG.md  CM.Email.WebhookVerification.csproj  CM.Email.WebhookVerification.sln  Exceptions.cs  HmacSigner.cs  WebhookHeaders.cs  WebhookValidator.cs
dotnet/CM.Email.WebhookVerification.Tests/: CM.Email.WebhookVerification.Tests.csproj  HmacSignerTestHelper.cs  HmacSignerTests.cs  WebhookValidatorTests.cs
go/: .gitignore  CHANGELOG.md  README.md  constants.go  errors.go  go.mod  signer.go  signer_test.go  validator.go  validator_test.go
javascript/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.types.json
javascript/src/: constants.ts  errors.ts  index.ts  signer.ts  validator.ts
javascript/tests/: signer.test.ts  validator.test.ts
python/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
python/src/cm_email_webhook_verification/: __init__.py  exceptions.py  signer.py  validator.py
python/tests/: __init__.py  test_validator.py
rust/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
rust/src/: error.rs  lib.rs  signer.rs  validator.rs
