[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cm-email-webhook-verification"
version = "1.0.0"
description = "SDK for verifying CM Email webhook signatures"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [ {name = "email-team"} ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]

keywords = ["webhook", "verification", "hmac", "signature", "cm", "email"]
dependencies = []

[project.urls]
Documentation = "https://github.com/cmdotcom/email-webhook-verification-sdks#readme"
Repository = "https://github.com/cmdotcom/email-webhook-verification-sdks"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
